# agentic-webapp

./: .dockerignore  .gcloudignore  .gitignore  Makefile  README.md  SETUP.md  docker-compose.yml
.github/actions/terraform/: action.yml
.github/workflows/: app-ci.yml  terraform-cicd-per-stack.yml  terraform-cicd-stack-webapp.yml
agent/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml
agent/agents/: services.py
agent/agents/assistant/: agent.py  assets_client.py  attachments.py  bookkeeping.py  firestore_session.py  mcp.py  search.py  summarizer.py  tools.py
agent/harness/: __init__.py  mcp_agent.py
agent/tests/: test_bookkeeping.py  test_firestore_session.py  test_mcp_client.py  test_mcp_wiring.py  test_search.py  test_services.py  test_summarizer.py  test_tools.py
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml
backend/src/agentic_webapp/: __init__.py  config.py  figures.py  identity.py  logging_setup.py  main.py  mcp_server.py  mcp_ui.py  rbac.py  testing.py
backend/src/agentic_webapp/api/: __init__.py  access.py  auth.py  deps.py
backend/src/agentic_webapp/api/routes/: admin.py  agent.py  analytics.py  assets.py  dashboards.py  dbt.py  extractions.py  folders.py  health.py  semantic.py  ui.py
backend/src/agentic_webapp/database/: __init__.py  bigquery.py  memory.py
backend/src/agentic_webapp/services/: __init__.py  asset_service.py  dbt_client.py
backend/src/agentic_webapp/storage/: memory.py
backend/tests/: conftest.py  test_admin.py  test_agent_proxy.py  test_analytics.py  test_api.py  test_asset_rbac.py  test_dashboards.py  test_database_contract.py  test_dbt.py  test_deps.py  test_directory.py  test_extractions.py  test_figures.py  test_folders.py  test_groups.py  test_groups_public.py  test_identity.py  test_main.py  test_mcp.py  test_mcp_semantic.py  test_mcp_ui.py  test_rbac.py  test_semantic.py  test_storage_contract.py
cli/: Makefile  README.md  pyproject.toml
cli/src/agentic_cli/: __init__.py  __main__.py  app.py  client.py  config.py  formatting.py
cli/src/agentic_cli/commands/: __init__.py  _common.py  admin.py  analytics.py  assets.py  folders.py  groups.py  identity.py
cli/tests/: conftest.py  test_cli.py  test_formatting.py
dbt/: .env.sample  .gitignore  .user.yml  Dockerfile  Makefile  cloudbuild.yaml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
dbt/macros/: elementary_materialization.sql
dbt/models/marts/: agg_vehicle_costs_yearly.sql  fct_fuel_purchases.sql  fct_maintenance.sql  schema.yml
dbt/models/marts/consulting/: dim_engagements.sql  fct_deliverables.sql  fct_engagement_financials.sql  fct_invoices.sql  fct_time_entries.sql  schema.yml
dbt/models/staging/: _sources.yml  schema.yml  stg_fuel_receipts.sql  stg_maintenance.sql
dbt/models/staging/consulting/: _sources.yml  schema.yml  stg_consulting__deliverables.sql  stg_consulting__engagements.sql  stg_consulting__financials.sql  stg_consulting__invoices.sql  stg_consulting__time_entries.sql
dbt/src/dbt_service/: __init__.py  __main__.py  app.py  config.py  observability.py  runner.py  schemas.py
dbt/tests/: conftest.py  test_api.py  test_observability.py  test_runner.py
docs/adr/: README.md  adr-0001-stateless-cloud-native-state.md  adr-0002-iap-via-github-secrets.md  adr-0003-environment-data-sensitivity-tiers.md  adr-0004-user-identity-and-simulation.md  adr-0005-local-dev-against-cloud-services.md  adr-0006-assets-single-source-of-truth.md  adr-0007-rbac-areas-and-personas.md  adr-0008-folders-groups-unified-sharing.md  adr-0009-theming-and-live-brandpacks.md  adr-0010-agent-web-search-grounding.md  adr-0011-core-api-mcp-and-cli.md  adr-0012-hand-authored-ui-tools-over-the-projection.md  adr-0013-semantic-layer-dbt-dashboards.md
docs/backlog/: mcpui.md
e2e/: Makefile  README.md  package.json  playwright.config.ts
e2e/tests/: chat.spec.ts  mcpui.spec.ts  mobile-layout.spec.ts
frontend/: Makefile  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/brandpacks/fsi-zurich/: brand.json
frontend/brandpacks/retail-woolworths/: brand.json
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  main.tsx
frontend/src/components/: AssetTree.test.tsx  AssetTree.tsx  ChatUIResource.test.tsx  ChatUIResource.tsx  Header.test.tsx  Header.tsx  KpiCard.test.tsx  KpiCard.tsx  Markdown.tsx  (+15 more)
infra/: .gitignore  AUTH.md  Makefile  README.md  config.yml
infra/bootstrap/: README.md  bootstrap_all.sh  bootstrap_github.sh  bootstrap_project.sh  config.sh
infra/tfs/: README.md  pyproject.toml
infra/tfs/scripts/: extract_stencils.py
infra/tfs/src/tfs/: app.py  config.py  gcp.py
infra/tfs/src/tfs/commands/: create.py  diagram.py  terraform.py  validate.py
infra/tfs/src/tfs/diagrams/: command.py  drawio_model.py  publish.py
infra/tfs/src/tfs/templates/: README.md.j2  main.tf
infra/tfs/src/tfs/templates/backends/: base.config.j2
infra/tfs/src/tfs/templates/workflows/: terraform-cicd-stack-STACKNAME.yml.j2
infra/tfs/tests/: test_commands.py  test_config.py  test_publish.py  test_tfs.py  test_validate.py
libs/core/: .gitignore  Makefile  README.md  pyproject.toml
libs/core/src/agentic_core/: __init__.py  access.py  models.py  pricing.py
libs/core/src/agentic_core/database/: __init__.py  analytics.py  asset_metadata.py  base.py  bigquery.py  dashboards.py  extraction.py  factory.py  firestore.py  folder.py  group.py  llm_usage.py  memory.py  seed.py  seed_consulting.py  semantic.py
libs/core/src/agentic_core/storage/: __init__.py  base.py  gcs.py  memory.py
libs/core/tests/: conftest.py  test_access.py  test_analytics.py  test_dashboards.py  test_database_contract.py  test_extraction.py  test_firestore_emulator.py  test_groups_folders.py  test_llm_usage.py  test_seed.py  test_seed_consulting.py  test_semantic.py  test_storage_contract.py
scripts/: dev-preflight.sh  mcp_harness.py  reset_state.py  with-firestore-emulator.sh
(+54 files in other folders)
