[project]
name = "agentic-webapp-agent"
version = "0.1.0"
description = "Google ADK agent sidecar for agentic-webapp. Default model: gemini-2.5-flash-lite (cheapest), keyless via Vertex AI."
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0.0",
    "agentic-core",
    "google-cloud-firestore>=2.27.0",
]

# App, not a library — we run `adk web agents`, never import this project as a package,
# so uv shouldn't try to build/install it (just its deps).
[tool.uv]
package = false

# Shared GCS/BigQuery lib via editable path dep (same pattern as backend; the agent
# Dockerfile copies ../libs/core into the image).
[tool.uv.sources]
agentic-core = { path = "../libs/core", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the ADK agents dir importable the way `adk web agents` does (so tests can
# import `assistant.firestore_session`, mirroring services.py).
pythonpath = ["agents"]
