[project]
name = "agentic-webapp-backend"
version = "0.1.0"
description = "Async FastAPI backend for agentic-webapp: storage + database abstractions over GCS and BigQuery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "google-cloud-storage>=2.18.0",
    "google-cloud-bigquery>=3.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_webapp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
