[project]
name = "agentic-webapp-backend"
version = "0.1.0"
description = "Async FastAPI backend for agentic-webapp: storage + database abstractions over GCS and BigQuery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentic-core",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

# Editable path dependency on the shared lib (no uv workspace — keeps the backend
# independently buildable into its own image; the Dockerfile copies ../libs/core in).
[tool.uv.sources]
agentic-core = { path = "../libs/core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_webapp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
files = ["src"]
