[project]
name = "agentic-webapp-cli"
version = "0.1.0"
description = "Thin local CLI for driving the agentic-webapp core API — one interface among many (SPA, MCP, agent), with persona-based RBAC simulation via --as."
readme = "README.md"
requires-python = ">=3.12"
# Runtime is deliberately schema-light: just an HTTP client. The API's OpenAPI spec is the
# contract; we read server JSON rather than vendoring the models, so the CLI stays a thin,
# independently-installable interface to the core API.
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_cli"]

# Tests drive the CLI against the REAL backend (booted in-process on a loopback port), so
# RBAC is exercised end-to-end with no mocks. Backend + core are dev-only path deps.
[tool.uv.sources]
agentic-webapp-backend = { path = "../backend", editable = true }
agentic-core = { path = "../libs/core", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "agentic-webapp-backend",
    "agentic-core",
    "uvicorn[standard]>=0.32.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
files = ["src"]
