[project]
name = "agentic-core"
version = "0.1.0"
description = "Shared cloud primitives for agentic-webapp: StorageManager (GCS) + DatabaseManager (BigQuery) abstractions and models. Consumed by backend and agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-firestore>=2.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_core"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.11"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
files = ["src"]

# Third-party SDKs without complete type information. Scoped overrides so strict
# mode still applies to our own code.
[[tool.mypy.overrides]]
module = ["google.cloud.*", "google.auth.*"]
ignore_missing_imports = true
